objects/LLC_BI__Document_Placeholder__c.object
<CustomObject>
    <description>This object stores information associated to the placeholders for documents in the Global Document Manager.</description>
    <fields>
        <fullName>LLC_BI__Approval_Date__c</fullName>
        <description>This field is optional and only used in classic Doc Man. It is a date/time stamp that lists the date/time the document in classic Relationship Document Manager was approved.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>approvalDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Roles__c</fullName>
        <description>This field is optional. It is a semicolon-delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document. This field is limited to 255 characters in length. This field works in tandem with the newer Placeholder Approval Roles field, which can accept more characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and only used in classic Doc Man. It is a lookup to the user who approved this document in classic Relationship Document Manager.</description>
        <label>approvedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Esign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. This checkbox, when set to true, can be used to tell a downstream process that this e-signature ready placeholder should automatically appear in Customer Portal once available, rather than requiring a Document Manager user to manually trigger this process.</description>
        <label>Auto E-Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Closing_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is automatically populated. It is a lookup to the closing checklist record that was used to create the placeholder record.</description>
        <label>Closing Checklist</label>
        <referenceTo>LLC_BI__ClosingChecklist__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date__c</fullName>
        <description>This field is optional and can be used to specify a document date. If the placeholder is enabled for Customer Portal, this date will be reflected to the Customer Portal user as a due date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional and can be used to specify a document description.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. If this Document Placeholder record was created from a closing checklist, the name of this record auto-populates with the name of the Document Placeholder.</description>
        <label>DocClass</label>
        <referenceTo>LLC_BI__DocClass__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is automatically populated. It is a lookup to which Relationship Document Manager the placeholder is located on. It is applicable to both classic Doc Man and Doc Man.</description>
        <label>DocManager</label>
        <referenceTo>LLC_BI__DocManager__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocTab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and automatically populated. It is only used in classic Doc Man, but is populated for Document Manager as well. It is a lookup to the Tab under which a classic Doc Man placeholder is located.</description>
        <label>DocTab</label>
        <referenceTo>LLC_BI__DocTab__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required, but auto-populates if the placeholder was created from a closing checklist record. This field is equivalent to a category name for groups of placeholder records.</description>
        <label>DocType</label>
        <referenceTo>LLC_BI__DocType__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Document_Source__c</fullName>
        <description>The system populates this picklist to define the source of a document in Document Manager. By default, it is blank. This field is not visible to users.</description>
        <inlineHelpText>This system-populated field displays a document’s source.</inlineHelpText>
        <label>Document Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doc_Prep</fullName>
                    <label>Doc Prep</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Document_Store_Index__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field populates automatically and associates placeholder records and document store records. This is a lookup to the Document Store Index.</description>
        <label>Document Store Index</label>
        <referenceTo>LLC_BI__Document_Store_Index__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Download_As_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It should be marked to true if a compatible file should be downloaded as a PDF.</description>
        <inlineHelpText>Field should be marked to true if a compatible file should be downloaded as a PDF.</inlineHelpText>
        <label>Download As PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__E_Vault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to send the placeholder for e-vault. By default, it is false. This field only displays when the OneSpan or E-Signature plugin is active.</description>
        <inlineHelpText>Select this field to flag the e-vault placeholder as to-send.</inlineHelpText>
        <label>E-Vault Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exception_Date__c</fullName>
        <description>This field is optional and can be used to specify a document exception date. If the exception date is the current date or prior, the document review status will automatically be set to Exception.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Id__c</fullName>
        <description>This field is not required but is automatically populated. It is a reference to the object ID of the record that the Document Placeholder is related to.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_File__c</fullName>
        <description>This field is not required but is automatically populated. The formula returns true if there is a document attached to the placeholder.</description>
        <formula>!ISBLANK(LLC_BI__Document_Store_Index__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required but is automatically populated. If true, the document was imported from another DocManager (for example, from Relationship to Loan).</description>
        <label>Is Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Staged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required but is automatically populated. If true, the placeholder is in File Staging.</description>
        <label>Is Staged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Trash__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required but is automatically populated. It is true if the placeholder is in Archive.</description>
        <label>Is Trash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Owner__c</fullName>
        <description>This field is optional. It is a picklist with roles associated to those users within nCino who may be responsible for that document placeholder file.</description>
        <label>Owner Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closer</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Loan Ops</fullName>
                </value>
                <value>
                    <fullName>Special Assets</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Lender/Admin</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Placeholder_Viewer_Groups__c</fullName>
        <description>This field is an optional, semicolon-delimited list that limits the accessibility of a specific document to the public groups added. Access includes the ability to view, download, copy the URL, and track the version history of the document. When left blank, no viewer restrictions are applied based on public groups. This field works in tandem with Placeholder Viewer Roles and Placeholder Viewer Profiles to determine which users can access a document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Placeholder Viewer Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Placeholder_Viewer_Profiles__c</fullName>
        <description>This field is an optional, semicolon-delimited list that limits the accessibility of a specific document to the user profiles added. Access includes the ability to view, download, copy the URL, and track the version history of the document. When left blank, no viewer restrictions are applied based on profiles. This field works in tandem with Placeholder Viewer Roles and Placeholder Viewer Groups to determine which users can access a document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Placeholder Viewer Profiles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Doc_Description__c</fullName>
        <description>This field is optional. This is the document description that is displayed to Customer Portal users.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Doc Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Doc_Name__c</fullName>
        <description>This field is optional. This is the document name that is displayed to Customer Portal users.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Doc Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. If true, this document displays in Customer Portal.</description>
        <label>Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Rejection_Date__c</fullName>
        <description>This field is optional and populates automatically when a Customer Portal document is rejected. This field stores the most recent date that the Customer Portal originated document was rejected.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Rejection_Reason__c</fullName>
        <description>This field is optional. This is the explanation text that is displayed to Customer Portal users when a document is rejected.</description>
        <label>Portal Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Signature</fullName>
                </value>
                <value>
                    <fullName>Wrong File</fullName>
                </value>
                <value>
                    <fullName>Unreadable</fullName>
                </value>
                <value>
                    <fullName>Out of Date</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Upload_Date__c</fullName>
        <description>This field is optional and is automatically populated. This field stores the date that a user uploads a document to Customer Portal for the placeholder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Uploaded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>Portal Uploaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UploadedDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Priority__c</fullName>
        <description>This field is optional. This picklist shows the priority of a specific placeholder. It can have values such as Critical, High, Medium, Low, or None.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional field. It is a lookup that links the Placeholder to a Requirement.</description>
        <label>Requirement</label>
        <referenceTo>LLC_BI__Requirement__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Review_Date__c</fullName>
        <description>This field is optional and represents the date when a document was reviewed by a user. This field does not auto-populate when a user changes the Status field to Reviewed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Review_Status__c</fullName>
        <description>This field is not required, but the user must populate it when in use. This field stores the status of a placeholder. A placeholder without an attachment can have a value of Open, Waived, or Exception. When a file is uploaded, it can have a value of Approved, Exception, Reviewed or Waived. A user can change these status values depending on their permissions.</description>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>In-File</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Awaiting Review</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and displays the user who reviewed the document with their role.</description>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReviewedDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sort_Order__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Trashed_Date__c</fullName>
        <description>This field is optional and auto-populates. This field stores the date and time that a document is trashed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Trashed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Viewer_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to preview and download a specific document. If left blank, all roles can view and download the document. This field is limited to 255 characters in length. This field is still respected, however, users should start using the newer Placeholder Viewer Roles field, which can accept more characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Viewer Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year__c</fullName>
        <description>This field is optional and stores the document year. This field gets set automatically when the date is set.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is not required but is automatically populated. The lookupKey is an external, unique key for this placeholder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and associates the placeholder to a relationship (account) record. The default picklist values are the legal entities related to the object in context when viewed in the edit details modal of Document Manager.</description>
        <label>Legal Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDOC__Attachment_Id__c</fullName>
        <description>This field holds the ID of the attachment that is currently associated with this placeholder. This field is populates automatically when an attachment is uploaded to a placeholder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Attachment Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Collateral_Mgmt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required but is automatically populated. It is used to help facilitate reporting on Collateral objects tied to Document Placeholder.</description>
        <inlineHelpText>Facilitate reporting on Collateral objects tied to Document_Placeholder</inlineHelpText>
        <label>Collateral Mgmt</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDOC__Collateral_Ownership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>Collateral Ownership</label>
        <referenceTo>LLC_BI__Account_Collateral__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDOC__Comments__c</fullName>
        <description>This field is not currently used in Document Manager.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>comments</label>
        <length>12000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__Created_By_Closing_Checklist_Id__c</fullName>
        <description>This field is not required. It auto-populates if the placeholder is created from a closing checklist.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Created_By_Closing_Checklist_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required but is automatically populated. It is used to help facilitate reporting on Deposit objects tied to Document Placeholder.</description>
        <inlineHelpText>Facilitate reporting on Deposit objects tied to Document_Placeholder</inlineHelpText>
        <label>Deposit_Account_Reporting_Helper</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDOC__File_Name__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__File_Size__c</fullName>
        <description>This field is not currently used.</description>
        <label>fileSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDOC__HasBeenWaived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field auto-populates when a placeholder&apos;s status has been changed to waived by the system.</description>
        <label>HasBeenWaived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDOC__Help_Text__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>helpText</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NDOC__Mime_Type__c</fullName>
        <description>This field is optional and automatically populates when a file is uploaded. This field records the MIME type (file extension) of the file uploaded to a placeholder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>mimeType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Owner_Object_Id__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ownerObjectId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Placeholder_Approval_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to approve a specific document. If left blank, all roles can approve the document. This field works in tandem with the older Approval Roles field, which is limited to fewer characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Semicolon delimited list of roles that are allowed to approve the document. If left blank all roles can approve the document.</inlineHelpText>
        <label>Placeholder Approval Roles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__Placeholder_Viewer_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to view and download a specific document, as well as copy its URL and view its version history. If left blank, all roles can view and download the document, as well as copy its URL and view its version history. This field works in tandem with the older Viewer Roles field, which is limited to fewer characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is a semicolon-delimited list of roles that are allowed to view and download a specific document, as well as copy its URL and view its version history. If left blank, all roles can view and download the document.</inlineHelpText>
        <label>Placeholder Viewer Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__Portal_Rejection_Comment__c</fullName>
        <label>Portal Rejection Comment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Portal_Rejection_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>The document you provided is missing a required signature. Please sign this document and upload again.</fullName>
                </value>
                <value>
                    <fullName>You did not provide the requested document. Please upload the correct document and submit again.</fullName>
                </value>
                <value>
                    <fullName>The document you uploaded cannot be read. Please upload a legible document.</fullName>
                </value>
                <value>
                    <fullName>The document you provided is out of date. Please provide a current version of the document.</fullName>
                </value>
                <value>
                    <fullName>The document you provided is incomplete. Please fill out the document completely and upload again.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDOC__Treasury_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required but is automatically populated. It is used to help facilitate reporting on Treasury Service objects tied to Document Placeholder.</description>
        <inlineHelpText>Facilitate Treasury Service reporting on Document_Placeholder objects</inlineHelpText>
        <label>Treasury_Service_Reporting_Helper</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDOC__version__c</fullName>
        <description>This field is not currently used.</description>
        <label>version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Placeholder</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Placeholder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Placeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>